[package]
name = "rust-graphics-window"
version = "0.1.2"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]
description = "A simple, small and minimal windowing library"
repository = "https://github.com/rust-graphics/rust-graphics-window"
license = "MIT"
readme = "README.md"
keywords = ["window", "graphics", "ui"]
categories = ["gui"]

[dependencies]
bitflags = "*"
libc = "*"

rust-graphics-log = {version = "*", path = "../rust-graphics-log"}
rust-graphics-main = {version = "*", path = "../rust-graphics-main"}

[target.'cfg(target_os = "android")'.dependencies]
rust-graphics-android = {version = "*", path = "../rust-graphics-android"}

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "*"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
js-sys = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rust-graphics-library-loader = {version = "*", path = "../rust-graphics-library-loader"}

[features]
debug_derive = []
verbose_log = ["debug_derive"]
vulkan = []
gl = []
default = ["gl"]